NEW IN WAF 2.0.19
-----------------
* Fix negative values for -j #2256
* Fix the Swig example compatibility with Python3 #2259
* Add extras/wafcache
* Tune the application name on --help #2254

NEW IN WAF 2.0.18
-----------------
* Fix a deadlock with cython and subst tasks #2244
* Fix rpath processing so that it no longer breaks dependency chains
* Fix fast_partial.py failures on configuration tests
* Fix duplicate -fno-strict-aliasing flags in Python compilation flags detection
* Fix annoying PIE errors in demos/asm/
* Improve configuration tests cache accuracy #2251
* Improve extras/fast_partial.py compatibility
* Improve extras/doxygen.py outdir parameter settings #2255
* Add a dependency scanner for assembly files (Gas/Yasm)
* Add executable arguments for configuration tests / execute=True
* Add a QtTest example to demos/qt5/ #2241
* Add a cross-compilation option to extras/objcopy.py #2247

NEW IN WAF 2.0.17
-----------------
* Improve build performance on FreeBSD and Python3 #2241
* Add Python 3.8 flag detection for building embedded interpreters #2239
* Prevent Qt5 uninstallation errors when c++ files are generated
* Improve installation/uninstallation colors

NEW IN WAF 2.0.16
-----------------
* Fix task semaphore errors on stateful tasks #2232
* Fix encoding errors with UTF-8 paths on Python 2 #2230
* Fix encoding errors in waf_unit_test #2220
* Improve dependency between javac task and use-d generated jars nodes
* Install pdb files with /debug:* flags #2224
* Make javadoc detection optional #2225
* Improve md5_tstamp documentation #2221
* Add extras/color_msvc to colorizes MSVC outputs #2221
* Fix symbol regex on mac-o binaries in extras/syms #2222
* Maintain order of lines in doxyfile in extras/doxygen #2223
* Improve extras/msvcdeps path handling
* Add extras/clang_cross for cross-compilation using clang

NEW IN WAF 2.0.15
-----------------
* Fix Python path detection under Git-Bash #2217
* Provide an option to disable args files #2216